@@ -1,3 +1,7 @@
+Fri Apr  3 12:25:28 CEST 2015
+	Do not enforce FD_SETSIZE-limit on worker control
+	pipe when using MHD_USE_EPOLL_LINUX_ONLY (#3751). -MH/CG
+
 Tue Mar 31 10:28:26 CEST 2015
 	Adding MHD_OPTION_NOTIFY_CONNECTION,
 	MHD_CONNECTION_NOTIFY_STARTED,
